--- a/mistral/ocr/structured_ocr.ipynb
+++ b/mistral/ocr/structured_ocr.ipynb
@@ -82,14 +82,10 @@
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "\n",
-        "# Загрузка файла с локального компьютера\n",
         "uploaded = files.upload()\n",
-        "\n",
-        "# Чтение содержимого файла\n",
         "for filename in uploaded.keys():\n",
         "    with open(filename, 'r') as file:\n",
-        "        mistral_api_key = file.read().strip()\n"
+        "        mistral_api_key = file.read().strip()"
       ],
       "metadata": {
         "colab": {
@@ -97,9 +93,9 @@
           "height": 73
         },
         "id": "JmPxjwWPl16Y",
-        "outputId": "1fdac1fc-6d40-4e3e-e82d-871c4174a50c"
+        "outputId": "67487a86-17fc-43af-fe44-41f8471c0cc2"
       },
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -109,9 +105,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-a9cdf342-1754-436c-be96-ed8bfd5cef65\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-58d2f200-f58e-47a6-a956-3b75b48381b9\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-a9cdf342-1754-436c-be96-ed8bfd5cef65\">\n",
+              "     <output id=\"result-58d2f200-f58e-47a6-a956-3b75b48381b9\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -299,7 +295,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving mistralAPIKEY.txt to mistralAPIKEY (1).txt\n"
+            "Saving mistralAPIKEY.txt to mistralAPIKEY (2).txt\n"
           ]
         }
       ]
